# TagDash

./: .gitignore  MISES-A-JOUR.md  README.md  dev.ps1  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: release.yml
docs/: spec_tagdash.md
docs/audits/: 2025-06-08_audit.md
memory/: project_bugfixes_session27.md  project_dashboard_moodboard_session60.md  project_dblclick_sl_and_alarms_panel_session26.md  project_micropullback_overlay_session59.md  project_premarket_daily_bar_session56.md
scripts/: build-macos-intel.sh  seed_tradetally.py
src/: App.tsx  FlashOverlay.tsx  fonts.css  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/defaults/: dashboard.json
src-tauri/resources/defaults/backgrounds/: photo-1477346611705-65d1883cee1e.avif
src-tauri/resources/defaults/mood/: long.txt  short.txt
src-tauri/src/: http.rs  lib.rs  main.rs  notify.rs  state.rs  time.rs
src-tauri/src/alpaca/: assets.rs  bars.rs  corporate_actions.rs  mod.rs  news.rs  news_stream.rs  stream.rs
src-tauri/src/chart_payloads/: mod.rs
src-tauri/src/chart_state/: mod.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/company_intel/: catalog.rs  error.rs  http.rs  mod.rs  model.rs  ondemand.rs  rate_limit.rs
src-tauri/src/company_intel/providers/: fmp_fin.rs  massive_si.rs  mod.rs  sec_edgar.rs
src-tauri/src/config/: mod.rs  secrets.rs
src-tauri/src/dashboard/: mod.rs
src-tauri/src/enrichment/: classify.rs  mod.rs
src-tauri/src/flat_files/: daily.rs  minute.rs  mod.rs  trade.rs
src-tauri/src/fmp/: mod.rs
src-tauri/src/hod_drive/: mod.rs
src-tauri/src/internal_trading/: fills.rs  mod.rs  risk.rs
src-tauri/src/llm/: deepseek.rs  mod.rs
src-tauri/src/local_db/: alarm_repository.rs  book_repository.rs  bug_repository.rs  cache_repository.rs  company_intel_repository.rs  company_meta_repository.rs  dashboard_repository.rs  drawing_repository.rs  execution_repository.rs  journal_repository.rs  llm_repository.rs  mod.rs  schema.rs  scoring_repository.rs  tags_repository.rs  tradetally_queue_repository.rs  universe_repository.rs
src-tauri/src/market_attention/: mod.rs
src-tauri/src/market_state/: aggregators.rs  latency.rs  mock_feed.rs  mod.rs  ring_buffer.rs
src-tauri/src/massive/: mod.rs  news.rs  short_interest.rs  splits.rs
src-tauri/src/micro_pullback/: mod.rs  tests.rs
src-tauri/src/panic_watchlist/: mod.rs
src-tauri/src/perfect_pullback/: mod.rs
src-tauri/src/replay/: clock.rs  data.rs  mod.rs  tape.rs
src-tauri/src/scanner/: alert_engine.rs  mod.rs
src-tauri/src/scoring/: mod.rs
src-tauri/src/screenshot/: mod.rs
src-tauri/src/sec_api/: mod.rs  sic_codes.rs
src-tauri/src/startup/: mod.rs
src-tauri/src/strategies/: backside_parabolic.rs  hod_drive.rs  micro_pullback.rs  mod.rs  panic_mean_reversion.rs  perfect_pullback.rs  registry.rs
src-tauri/src/stt/: cleanup.rs  mod.rs  model.rs  queue.rs  recorder.rs  vad.rs  worker.rs
src-tauri/src/tradetally/: client.rs  mod.rs  payloads.rs  worker.rs
src-tauri/src/types/: mod.rs
src-tauri/src/universe/: mod.rs
src/charts/: bollingerPrimitive.ts  chartOptions.ts  drawingsPrimitive.ts  executionsPrimitive.ts  gridPrimitive.ts  indicators.ts  newsPrimitive.ts  useBarSeries.ts  useBarTooltip.ts  useCandleMarkers.ts  useChartBars.ts  useCrosshairRegister.ts  useDeleteButtons.ts  useDraftLines.ts  useExecutionMarkers.ts  useIndicators.ts  useLimitLines.ts  useLiveTicks.ts  useNewsMarkers.ts  usePrevDayLines.ts  useReferenceLines.ts  useSessionShading.ts  useSlTpLines.ts  useVolumeSeries.ts
src/components/: AlarmsPanel.tsx  BugReportModal.tsx  ChartZone.tsx  DayPickerModal.tsx  DrawingContextMenu.tsx  EnrichmentBand.tsx  FeedDiagnosticsModal.tsx  FlatFilesModal.tsx  GamepadOverlays.tsx  GamepadSettings.tsx  JournalModal.tsx  LeftRail.tsx  LightweightChart.tsx  LiveFeedPanel.tsx  LogsPanel.tsx  MainWindow.tsx  MicDictate.tsx  NewsDebugModal.tsx  OrdersPanel.tsx  PositionsPanel.tsx  ReplayToolbar.tsx  RestartRequiredDialog.tsx  ScannerAlerts.tsx  ScreenerPanel.tsx  SessionClock.tsx  SettingsModal.tsx  Sidebar.tsx  StartupModal.tsx  StartupPanel.tsx  SttModal.tsx  SyncStatusModal.tsx  TickerSpotlight.tsx  TickersTableModal.tsx  TitleBar.tsx  TodoPanel.tsx  TradeTally.tsx  TradesDBModal.tsx  UpdateModal.tsx  chartZoneParts.tsx
src/components/dashboard/: AutoFitText.tsx  ChartCard.tsx  Dashboard.tsx  GridCard.tsx  JournalCard.tsx  KpiCard.tsx  MoodCards.tsx  PnlCurveCard.tsx  RollingProfitFactorCard.tsx  cards.tsx  frosted.tsx  kpis.ts  useDashboard.ts
src/components/settings/: DataSourceTab.tsx  DicteeTab.tsx  FeedDiagnosticsTab.tsx  LogsTab.tsx  NewsDebugTab.tsx  StartupTab.tsx  SyncTab.tsx  TickersDbTab.tsx  TradesDbTab.tsx  UpdateTab.tsx
src/components/ui/: chart.tsx
src/hooks/: useGamepad.ts  useHotkeys.ts  useSttEvents.ts
src/lib/: crosshairSync.ts  gamepadActions.ts  gamepadBus.ts  notifSounds.ts  nyTime.ts  tauri.ts
src/queries/: useAlertNotifications.ts  useAppStatus.ts  useConfig.ts  useLocalConfig.ts  useMarket.ts  useMockAlerts.ts  useScanner.ts  useSecretsStatus.ts  useStartup.ts  useSyncStatus.ts
src/stores/: alertStatusStore.ts  chartInputStore.ts  chartStore.ts  chartThemeStore.ts  dashboardStore.ts  drawingPrefsStore.ts  gamepadStore.ts  gamepadUiStore.ts  hotkeyStore.ts  journalStore.ts  layoutStore.ts  paneSizeStore.ts  sttStore.ts  uiStore.ts  updaterStore.ts
src/types/: index.ts
