[package]
name = "tagdash"
version = "0.1.0"
description = "TagDash — scanner live Alpaca + Tauri + TradeTally"
authors = ["Etienne Fabre"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "tagdash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `unstable` enables the multi-webview API (Window::add_child / Webview show/hide)
# used to embed the TradeTally site as a native child webview over its tab.
tauri        = { version = "2", features = ["macos-private-api", "unstable"] }
tauri-plugin-shell = "2"
# Native OS notifications (Windows toast / macOS Notification Center) — opt-in
# desktop alert when a scanner alert fires (gated by ui.desktop_alerts).
tauri-plugin-notification = "2"
# Automatic updates (Tauri official updater) — checks GitHub Releases at launch,
# downloads + installs a newer signed bundle, then relaunches via the process
# plugin. Desktop-only; gated behind `#[cfg(desktop)]` at registration.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# WebView2 (Windows) and WKWebView (macOS) don't reliably expose the W3C Gamepad
# API, so the Xbox controller is invisible to navigator.getGamepads() even though
# it works in a normal browser. This plugin polyfills the Gamepad API natively
# (gilrs) so the standard frontend code sees the pad. Note: no vibration support.
tauri-plugin-gamepad = "0.0.6"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
thiserror    = "1"
chrono       = { version = "0.4", features = ["serde"] }
rusqlite     = { version = "0.32", features = ["bundled"] }
toml         = "0.8"
dirs         = "5"
reqwest      = { version = "0.12", features = ["json", "rustls-tls", "multipart", "gzip"], default-features = false }
rand         = "0.8"
futures-util = "0.3"
# Alpaca live market-data WebSocket. rustls (webpki roots) — no native TLS, matches reqwest.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }

# ── Speech-to-Text pipeline (offline dictée → notes/diary) ────────────────────
# whisper.cpp via the whisper-rs bindings: fully local, offline French transcription
# (no API). CPU by default everywhere; Metal is enabled on macOS below for a free
# speed-up on Apple Silicon. CUDA / Vulkan stay opt-in (see the `stt-cuda` /
# `stt-vulkan` features) because they pull heavy build-time SDKs.
whisper-rs   = "0.16"
# Native microphone capture (avoids WebView2's getUserMedia permission prompts and
# webm/opus decoding — we feed whisper raw PCM directly).
cpal         = "0.15"
# CPU load sampling for the worker's "pause when the machine is busy" guard.
sysinfo      = "0.32"
# WAV read/write for the persisted STT job queue (each queued dictée is a small WAV).
hound        = "3.5"
# Light FFT for the live audio spectrum shown in the recording modal.
rustfft      = "6"

# Metal acceleration for whisper.cpp on macOS only (Apple Silicon). Features union
# across the base + target entries, so non-macOS builds stay pure CPU.
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Opt-in GPU backends for whisper.cpp (heavy build deps — enable with
# `cargo build --features stt-cuda` on a box with the CUDA toolkit, etc.).
stt-cuda   = ["whisper-rs/cuda"]
stt-vulkan = ["whisper-rs/vulkan"]

# Incremental compilation is disabled for the dev profile: the project lives on a
# cloud-synced folder (SynologyDrive), which intermittently corrupts the
# target/debug/incremental cache and makes rustc panic with an ICE
# (SerializedDepGraph::decode assertion) on `tauri dev`. Turning it off trades a
# little rebuild speed for a reliable dev build.
[profile.dev]
incremental = false
